--- a/Myprofile/css/New_layout.css
+++ b/Myprofile/css/New_layout.css
@@ -1,15 +1,37 @@
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+
+
 .swiper {
-    width: 100vw;
-    height: 100vh;
+  width: 100%;
+  height: 800px;
+  margin: 20px auto;
 }
+
 .swiper-slide {
-    background-color: white;
-    color: lightsalmon;
-    text-align: center;
-    justify-content: center;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.append-buttons {
+  text-align: center; /* Center-align the content horizontally */
+}
+
+.append-buttons a {
+  display: inline-block;
+  border: 1px solid #007aff;
+  color: #007aff;
+  text-decoration: none;
+  padding: 1px 1px;
+  border-radius: 4px;
+  margin: 0 10px;
+  font-size: 13px;
+  text-align: center; /* Center-align the text within the buttons */
+}
+html,
+body {
+  position: relative;
+  height: 100%;
 }
